[package]
name = "sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum =  {version = "0.6.19", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
headers = "0.3"